# agbdesk

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  clean.sh  cmake_install.cmake
src/: agbdesk.cpp  agbdesk.h  common.h  main.cpp
src/JIT/: base.cpp  base.h
src/JIT/x64/: address.cpp  errstring.h  ptr.cpp  regs.cpp  x64.cpp  x64.h
src/core/cpu/: instructions.cpp  instructions.h  registerfile.cpp  registerfile.h
src/core/cpu/instructiondefs/: arminstr.h  instructiontable.cpp  instructiontable.h
src/cpu/: registerfile.h
src/frontend/terminal/: agbterm.h
src/frontend/visual/: visual.cpp  visual.h
src/terminal/: agbterm.cpp  agbterm.h
src/util/: bits.h  int.h  staticeval.h
src/visual/: visual.cpp
